5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4432/executions/1649_1053.log
== TEST (2019-04-08 23:28:01) 
-- CODE:
nome=(input("digite o nome do patrono:   "))
if(nome=="cervo")
	


-- ERROR:
File "XXXX", line 2
    if(nome=="cervo")
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 23:28:53) 
-- CODE:
nome=(input("digite o nome do patrono:   "))
if(nome=="cervo"):
	print(nome,"eh petrono do Harry Potter")
	


-- OUTPUT:
cervo eh petrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 23:29:45) 
-- CODE:
nome=(input("digite o nome do patrono:   "))
if(nome=="cervo"):
	print(nome,"eh petrono do Harry Potter")
else:
	print(nome,"nao eh patrono do Harry Potter")
	


-- EXECUTION TIME:
0.180459
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh petrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 23:30:04) 
-- CODE:
nome=(input("digite o nome do patrono:   "))
if(nome=="cervo"):
	print(nome,"eh petrono do Harry Potter")
else:
	print(nome,"nao eh patrono do Harry Potter")
	


-- OUTPUT:
cervo eh petrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 23:31:05) 
-- CODE:
nome=(input("digite o nome do patrono:   "))
if(nome=="cervo"):
	print(nome,"eh petrono do Harry Potter")
else:
	print(nome,"nao eh patrono do Harry Potter")
	


-- EXECUTION TIME:
0.13687
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh petrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 23:32:37) 
-- CODE:
nome=input("digite o nome do patrono:   ")
if(nome=="cervo"):
	print(nome,"eh petrono do Harry Potter")
else:
	print(nome,"nao eh patrono do Harry Potter")
	


-- EXECUTION TIME:
0.129248
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh petrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 23:32:42) 
-- CODE:
nome=input("digite o nome do patrono:   ")
if(nome=="cervo"):
	print(nome,"eh petrono do Harry Potter")
else:
	print(nome,"nao eh patrono do Harry Potter")
	


-- EXECUTION TIME:
0.147579
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh petrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 23:33:12) 
-- CODE:
nome=input("digite o nome do patrono:   ")
if(nome=="cervo"):
	print(nome,"eh petrono do Harry Potter")
else:
	print(nome,"nao eh patrono do Harry Potter")
	


-- OUTPUT:
cervo eh petrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 23:33:30) 
-- CODE:
nome=input("digite o nome do patrono:   ")
if(nome=="cervo"):
	print(nome,"eh patrono do Harry Potter")
else:
	print(nome,"nao eh patrono do Harry Potter")
	


-- EXECUTION TIME:
0.155945
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
